# optifier

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  README.md
examples/: playground.rs
src/: lib.rs
tests/: partial_basic.rs
