[package]
name = "optifier"
version = "0.1.0-beta.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kkafar/optifier"
homepage = "https://github.com/kkafar/optifier"
description = """
Rust macros for deriving optional types
"""
keywords = ["macro", "derive", "macros"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
include = [
  "src/*",
  "Cargo.toml"
]

[lib]
proc_macro = true

[dependencies]
syn = ">= 2.0.13"
quote = ">= 1.0.26"

